Bug 458254 - Cannot hide completed todo
Summary: Cannot hide completed todo
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: todoview (other bugs)
Version First Reported In: 5.19.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-08-24 14:46 UTC by Gathur Zent
Modified: 2023-06-11 11:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gathur Zent 2022-08-24 14:46:27 UTC
SUMMARY
Now completed todo shows in TODO view.
In settings of Todo View there is an option "Always display completed to-dos at the bottom of the list", but after disabling it all completed to-dos still show up.

STEPS TO REPRODUCE
1. Create some to-dos and complete them
2. Disable always display completed to-dos option


OBSERVED RESULT

Completed to-dos remain at the bottom of the list.
EXPECTED RESULT

They are hidden.
SOFTWARE/OS VERSIONS

Linux/KDE Plasma: Fedora Linux 35 KDE Plasma
KDE Plasma Version: 5.25.4
KDE Frameworks Version: 5.96.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 Thomas Karpiniec 2023-06-08 04:41:29 UTC
I can confirm but I think OP has misunderstood the preference. It's intended to control whether to-dos should be sorted differently rather than whether they are visible. Hiding is currently supported via filters (which works correctly). The real bug here IMO is that changing the preference doesn't actually update the view until you either restart KOrganizer or toggle the flat/tree view, so it seems broken. If this was working correctly the reporter probably would have understood its intent.

KOrganizer: Version 5.23.1 (23.04.1)
Comment 2 Bug Janitor Service 2023-06-08 04:47:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/eventviews/-/merge_requests/86
Comment 3 Gathur Zent 2023-06-08 14:51:15 UTC
(In reply to Thomas Karpiniec from comment #1)
> I can confirm but I think OP has misunderstood the preference. It's intended
> to control whether to-dos should be sorted differently rather than whether
> they are visible. Hiding is currently supported via filters (which works
> correctly). The real bug here IMO is that changing the preference doesn't
> actually update the view until you either restart KOrganizer or toggle the
> flat/tree view, so it seems broken. If this was working correctly the
> reporter probably would have understood its intent.
> 
> KOrganizer: Version 5.23.1 (23.04.1)

It makes good sense, thank you! Also I noticed that the filter is not by default shown in the toolbar menu, actually I am not aware of its existence until you mentioned about it.
Comment 4 Thomas Karpiniec 2023-06-11 09:04:01 UTC
Git commit db4009f65c84be6a364a9f7b405c64520cf57f58 by Thomas Karpiniec.
Committed on 08/06/2023 at 04:34.
Pushed by vkrause into branch 'master'.

Invalidate model to apply sortCompletedTodosSeparately pref

M  +4    -0    src/todo/todoview.cpp

https://invent.kde.org/pim/eventviews/-/commit/db4009f65c84be6a364a9f7b405c64520cf57f58
Comment 5 Volker Krause 2023-06-11 11:45:20 UTC
Git commit 83076ae14a07ffa3f689e9e603a9d078ffc41598 by Volker Krause, on behalf of Thomas Karpiniec.
Committed on 11/06/2023 at 11:39.
Pushed by vkrause into branch 'release/23.04'.

Invalidate model to apply sortCompletedTodosSeparately pref


(cherry picked from commit db4009f65c84be6a364a9f7b405c64520cf57f58)

M  +4    -0    src/todo/todoview.cpp

https://invent.kde.org/pim/eventviews/-/commit/83076ae14a07ffa3f689e9e603a9d078ffc41598