Invalidate model to apply sortCompletedTodosSeparately pref

BUG: 458254


(cherry picked from commit db4009f65c84be6a364a9f7b405c64520cf57f58)