src/todo/todoview.cpp
@@ -602,6 +602,10 @@ void TodoView::updateConfig()
         mQuickAdd->setVisible(preferences()->enableQuickTodo());
     }
 
+    if (mProxyModel) {
+        mProxyModel->invalidate();
+    }
+
     updateView();
 }
 
